# askUOS

./: .dockerignore  .env.dev-example  .env.prod-example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  agent_openai_tools.py  chat_with_document.py  config.yaml  config_example.yaml  crawler.py  docker-compose.prod.yml  docker-compose.yml  embedding.py  entrypoint.sh  filter_urls.py  gpt_chat.py  gpt_test.py  llama2_chat.py  llama2_chat_copy.py  main.py  milvus.yaml  pipeline.py  promtail-config.yaml  pyproject.toml  requirements.prod.txt  requirements.txt  requirments.txt  retrieval_agent.py  settings.py  start.py  streamlit_chat.py  test.py  vector_store.py  warm_up.py  zero_shot_agent.py
.devcontainer/: devcontainer.json  docker-compose.yml
.streamlit/: config.toml
agents/: agent_openai_tools.py  retrieval_agent.py  zero_shot_agent.py
ansible/: deploy.sh  hosts  main_config.yaml  server.yaml  ssh_key_repo.yaml
chain_chatbots/: gpt_chat.py  main.py  main_copy.py
data/: application.txt
data_ingestion/: crud_ragflow.py  detect_faq.py  extract_faqs.py  generate_test_questions.py  utils.py
db/: vector_store.py
docs/: Caddy.example  _config.yml  backend_config_example.yaml  configuration.md  docker-compose.prod.example.yml  getting-started.md  index.md  ui_example_config.yml
eval/: BERTscore_eval.ipynb  bleu_eval.ipynb  main.py  requirements_eval.txt  rouge_eval.ipynb
eval_generation/: BERTscore_eval.py  LLM_as_Judge.py  bleu_eval.py  main.py  requirements_eval.txt  rouge_eval.py
eval_logs/: analyze_logs.py
evaluation/: analyze_logs.py
nginx/: nginx.conf.example
pages/: ask_uos_chat.py  language.py  streamlit_chat.py  utils.py
src/: backend_config_example.yaml  start.py
(+124 files in other folders)
