[project]
name = "askUOS"
version = "0.1.0"
description = "AI chatbot for applicants and students – get instant answers about studies, teaching, and campus life"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "fastembed",
    "google-genai>=1.63.0",
    "ipython",
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "langchain-google-genai>=4.2.0",
    "langchain-milvus",
    "langchain-ollama",
    "langchain-openai",
    "langchain-redis",
    "langgraph",
    "langgraph-checkpoint-redis>=0.3.5",
    "nest-asyncio>=1.6.0",
    "pydantic-settings",
    "pymilvus",
    "pypdf",
    "pypdf2",
    "python-frontmatter",
    "redis",
    "streamlit===1.47.0",
    "streamlit-cookies-controller===0.0.4",
    "tqdm",
    "uvicorn>=0.41.0",
]
